--- a/containers/ProjectsSection/ProjectsSection.module.scss
+++ b/containers/ProjectsSection/ProjectsSection.module.scss
@@ -21,7 +21,7 @@
       text-align: center;
       font-weight: 700;
       cursor: pointer;
-      transition: all 0.5 ease-in-out;
+      transition: all 0.5s ease-in-out;
     }
 
     .active-tag {
